--- a/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Source Contents/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Source Contents/Packages/PZKit/Sources/PZBaseKit/Resources/Localizable.xcstrings
@@ -46,12 +46,13 @@
       }
     },
     "app.language.followSystemDefault" : {
+      "comment" : "Follow OS Default Settings",
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "OS Default"
+            "value" : "OS Automatic"
           }
         }
       }
