--- a/_i18n_xliff/UnitedPizzaHelper Localizations/it.xcloc/Source Contents/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/it.xcloc/Source Contents/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
@@ -306,6 +306,17 @@
         }
       }
     },
+    "hylKit.battleReportView.challengeType" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Challenge Type"
+          }
+        }
+      }
+    },
     "hylKit.battleReportView4GI.navTitle.spiralAbyss" : {
       "extractionState" : "manual",
       "localizations" : {
